2010-05-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, cimslpUtil.h, cimslp.c, cimslp.h,
          cimslpSLP.c, cimslpSLP.h, cimslpCMPI.c, cimslpCMPI.h,
          profileProvider.c, interopProvider.c, sfcBroker.c
	[ 2987170 ] Handle SLP in a provider

2010-05-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, instance.c, instance.h, 
	  interopProvider.c, 
	  test/TestProviders/tests/IndTest3CreateSubscription.*,
	  test/TestProviders/tests/IndTest5DeleteSubscription.xml, 
	  test/xmltest/Indication03CreateSubscription.OK, 
	  test/xmltest/Indication11DeleteSubscription.xml:
	[ 2999667 ] Handle DeliveryFailureTime internally

2010-05-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh:
	[ 2997961 ] IndRetryTest.sh leaves IndicationSubscription modded

2010-05-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/cmpiTestIndicationProvider.c:
	[ 2997928 ] Namespace incorrect in test_providers

2010-04-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2980524 ] providerRegister should collate namespaces
	(patch by Klaus Kaempf)

	* profileProvider.c, providerMgr.c, 10_interop.mof, default.reg.in:
	[ 2994921 ] Make RegisteredProfile for PRP a static instance

2010-04-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c, constClass.c:
	[ 2993137 ] CMSetProperty fails for CMPIInstance for EmbeddedObject

2010-04-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	[ 2990169 ] Bump downloaded CIM schema to 2.25

2010-04-20 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* objecpath.c:
	[ 2990091 ] Implement getPropertyQualifier in CMPIObjectPath

2010-04-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	[ 2979043 ] Fix leak in msgqueue.c during an error condition
	(patch by John Powell)

	* queryStatement.c, providerDrv.c: