@@ -49,6 +49,7 @@ Bugs fixed:
 - 2997928 Namespace incorrect in test_providers
 - 2997961 IndRetryTest.sh leaves IndicationSubscription modded
 - 2999667 Handle DeliveryFailureTime internally
+- 3001879 Remove SLP sections from internalProvider
 
 Changes in 1.3.7
 ================
