@@ -1,3 +1,8 @@
+2010-05-14  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* internalProvider.c:
+	[ 3001879 ] Remove SLP sections from internalProvider
+
 2010-05-10 Sean Swehla <smswehla@linux.vnet.ibm.com>
 
 	* Makefile.am, cimslpUtil.h, cimslp.c, cimslp.h,
